part2/ex2.02/manifests/project-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      volumes:
        - name: shared-project
          persistentVolumeClaim:
            claimName: project-claim
      containers:
        - name: project
          image: ptuomola/project:0.5.0
          imagePullPolicy: Always
          volumeMounts:
          - name: shared-project
            mountPath: /var/tmp/app/files
