part2/ex2.02/manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  type: ClusterIP
  selector:
    app: backend 
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 8080
