part2/ex2.02/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: project-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: project-svc
          servicePort: 2347
      - path: /todos
        pathType: Prefix
        backend:
          serviceName: backend-svc
          servicePort: 2347
